рефакторинг продакшн кода