@@ -1,12 +1,13 @@
 package ru.mdemidkin.repository.impl;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 import ru.mdemidkin.model.Comment;
+import ru.mdemidkin.repository.BaseRepository;
 import ru.mdemidkin.repository.api.CommentRepository;
+import ru.mdemidkin.utils.SqlUtils;
 
 import java.sql.PreparedStatement;
 import java.sql.Statement;
@@ -16,22 +17,21 @@ import java.util.Objects;
 import static ru.mdemidkin.mapper.RawMapper.commentRowMapper;
 
 @Repository
-@RequiredArgsConstructor
-public class CommentRepositoryImpl implements CommentRepository {
+public class CommentRepositoryImpl extends BaseRepository implements CommentRepository {
 
-    private final JdbcTemplate jdbcTemplate;
+    public CommentRepositoryImpl(JdbcTemplate jdbcTemplate) {
+        super(jdbcTemplate);
+    }
 
     @Override
     public List<Comment> findByPostId(Long postId) {
-        String sql = "SELECT * FROM comments WHERE post_id = ? ORDER BY id";
-        return jdbcTemplate.query(sql, commentRowMapper, postId);
+        return jdbcTemplate.query(SqlUtils.FIND_COMMENT_BY_POST_ID, commentRowMapper, postId);
     }
 
     @Override
     public Comment findById(Long id) {
-        String sql = "SELECT * FROM comments WHERE id = ?";
-        List<Comment> comments = jdbcTemplate.query(sql, commentRowMapper, id);
-        return comments.isEmpty() ? null : comments.get(0);
+        List<Comment> comments = jdbcTemplate.query(SqlUtils.FIND_COMMENT_BY_ID, commentRowMapper, id);
+        return comments.isEmpty() ? null : comments.getFirst();
     }
 
     @Override
@@ -47,10 +47,7 @@ public class CommentRepositoryImpl implements CommentRepository {
         KeyHolder keyHolder = new GeneratedKeyHolder();
 
         jdbcTemplate.update(connection -> {
-            PreparedStatement ps = connection.prepareStatement(
-                    "INSERT INTO comments (post_id, text) VALUES (?, ?)",
-                    Statement.RETURN_GENERATED_KEYS
-            );
+            PreparedStatement ps = connection.prepareStatement(SqlUtils.INSERT_COMMENT, Statement.RETURN_GENERATED_KEYS);
             ps.setLong(1, comment.getPostId());
             ps.setString(2, comment.getText());
             return ps;
@@ -64,22 +61,21 @@ public class CommentRepositoryImpl implements CommentRepository {
 
     private Comment update(Comment comment) {
         jdbcTemplate.update(
-                "UPDATE comments SET text = ? WHERE id = ?",
+                SqlUtils.UPDATE_COMMENT,
                 comment.getText(),
-                comment.getId()
-        );
+                comment.getId());
 
         return comment;
     }
 
     @Override
     public void deleteById(Long id) {
-        jdbcTemplate.update("DELETE FROM comments WHERE id = ?", id);
+        jdbcTemplate.update(SqlUtils.DELETE_COMMENT_BY_ID, id);
     }
 
     @Override
     public void deleteByPostId(Long postId) {
-        jdbcTemplate.update("DELETE FROM comments WHERE post_id = ?", postId);
+        jdbcTemplate.update(SqlUtils.DELETE_COMMENT_BY_POST_ID, postId);
     }
 
 }
